[gd_scene load_steps=4 format=3 uid="uid://cduurnte5dt2o"]

[ext_resource type="Script" uid="uid://cyy4o1fbhdpnn" path="res://HUD/mode_hud/drag_seed_packet_up.gd" id="1_88b7a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1iis"]
size = Vector2(196, 27.6305)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88b7a"]
size = Vector2(198.269, 49.2608)

[node name="drag_seed_packet_up" type="Node2D"]
z_index = 1
scale = Vector2(0.917946, 0.812005)
script = ExtResource("1_88b7a")

[node name="stopper_detector" type="Area2D" parent="."]
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="stopper_detector"]
position = Vector2(101, 10.8151)
shape = SubResource("RectangleShape2D_g1iis")

[node name="back_stopper" type="Area2D" parent="."]
collision_layer = 131072
collision_mask = 131072

[node name="CollisionShape2D" type="CollisionShape2D" parent="back_stopper"]
position = Vector2(101.313, 98.5216)
shape = SubResource("RectangleShape2D_88b7a")

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="area_exited" from="stopper_detector" to="." method="_on_stopper_detector_area_exited"]
[connection signal="area_shape_entered" from="stopper_detector" to="." method="_on_stopper_detector_area_shape_entered"]
